# design_studio_first_ros

./: .gitignore  _vel  frames_2025-09-13_12.47.38.gv  frames_2025-09-13_13.17.06.gv  frames_2025-09-14_04.19.28.gv  frames_2025-09-14_04.19.58.gv
src/MS200_ros/: CMakeLists.txt
src/MS200_ros/launch/: ms200_scan.launch.py
src/uds_bringup/: CMakeLists.txt  package.xml  uds_bringupConfig.cmake.in  uds_bringupConfigVersion.cmake.in
src/uds_bringup/config/: uds_controller.yaml
src/uds_bringup/launch/: robot.launch.py  rsp.launch.py  uds_control.launch.py
src/uds_bringup/rviz/: display.rviz
src/uds_description/: CMakeLists.txt  package.xml
src/uds_description/launch/: display.launch.py  uds_gazebo.launch.py
src/uds_description/meshes/: assembled.stl  base.stl  wheel.stl
src/uds_description/urdf/body/: uds_base.urdf.xacro  uds_castor.urdf.xacro  uds_robot.urdf.xacro  uds_stud.urdf.xacro  uds_wheel.urdf.xacro
src/uds_description/urdf/gazebo/: gazebo_control.xacro  uds.gazebo.xacro
src/uds_description/urdf/ros2_control/: uds_ros2_control.xacro
src/uds_description/urdf/sensors/: lidar.urdf.xacro
src/uds_hardware/: CMakeLists.txt  package.xml  uds_hardware.xml
src/uds_hardware/include/uds_hardware/: arduino_comms.hpp  diffbot_system.hpp  wheel.hpp
src/uds_hardware/src/: diffbot_system.cpp
