<?xml version="1.0"?>
<package format="3">
  <name>uds_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for uds robot</description>
  <maintainer email="praiseorji4@gmail.com">chibueze</maintainer>
  <license>BSD-3-Clause</license>

  <!-- runtime deps only -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
